--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,20 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>nz.ac.waikato.cms.weka</groupId>
+      <artifactId>weka-stable</artifactId>
+      <version>3.8.6</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
+    
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
