--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "java.configuration.updateBuildConfiguration": "automatic",
     "github-actions.workflows.pinned.workflows": [
         ".github/workflows/maven.yml"
-    ]
+    ],
+    "maven.view": "hierarchical"
 }
