--- a/pom.xml
+++ b/pom.xml
@@ -25,20 +25,23 @@
       <artifactId>weka-stable</artifactId>
       <version>3.8.6</version>
     </dependency>
-
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.6</version>
     </dependency>
-    
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-csv</artifactId>
+      <version>1.9.0</version>
+  </dependency>
+    
   </dependencies>
 
   <build>
