--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,11 +6,11 @@
     "configurations": [
         {
             "type": "java",
-            "name": "Launch App",
+            "name": "FS (forward wrapper)",
             "request": "launch",
             "mainClass": "it.torkin.App",
             "projectName": "classifier-evaluator",
-            "args": "/run/media/daniele/614F7D537CF390D4/corsi/ISW2/hw_falessi/buggynessCrawler/datasets/Torkin1_avro_dataset_50%.csv naiveBayes,randomForest,ibk"
+            "args": "/run/media/daniele/614F7D537CF390D4/corsi/ISW2/hw_falessi/buggynessCrawler/datasets/Torkin1_avro_dataset_50%.csv naiveBayes,randomForest,ibk wrapper forward"
         }
     ]
 }
